fix slider alignment

--- a/src/componenets/Slider/styles.scss
+++ b/src/componenets/Slider/styles.scss
@@ -1,6 +1,8 @@
 @import '../../styles/colors.scss';
 
 .slider {
+  margin-top: 3.125em;
+
   &__header {
     display: inline-flex;
     align-items: center;
